--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hellow world</h1>
-</body>
-</html>
+<%- include('partials/header.ejs'); -%>
+
+<div class="todo-container">
+    <div class="todo-list">
+        <h2>
+        <%= listHeader %>
+        </h2>
+    </div>
+</div>
+
+<%- include('partials/footer.ejs'); -%>
