--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,45 +1,44 @@
 <%- include('partials/header.ejs'); -%>
 
-<div class="container" id="heading">
-    <h2>
-        <%= listHeader %>
-    </h2>
-</div>
-</div class="container">
-    <% for (let item of listItems){%>
+  <div class="box" id="heading">
+    <h1>
+      <%= listHeader %>
+    </h1>
+  </div>
+  <div class="box">
+    <% for(let item of listItems){%>
       <div class="item">
-
-        <form action="/delete" method="POST">
-           <input type="checkbox" onchange="this.form.submit()" name="deletedItemId" value="<%= item.id %>"/>
+        <form action="/delete" method="post">
+          <input type="checkbox" onchange="this.form.submit()" name="deletedItemId" value="<%= item.id %>">
         </form>
 
-        <p id="content<%item.id%>">
-           <%= item.content %>
+        <p id="content<%=item.id%>">
+          <%= item.content %>
         </p>
 
-        <form class="edit" action="/edit" method="POST">
-            <input type="hidden" name="updatedItemId" value="<%=item.id%>"/>
-            <input id="input<%=item.id%>" type="text" name="updatedItemContent" value="<%=item.title%>" autocomplete="off"
-                autofocus="true" hidden="true"/>
-            <button id="done<%=item.id%>" class="edit-btn" type="submit" hidden>done</button>
+        <form class="edit" action="/edit" method="post">
+          <input type="hidden" name="updatedItemId" value="<%= item.id %>">
+          <input id="input<%=item.id%>" type="text" name="updatedItemContent" value="<%= item.content %>" autocomplete="off"
+            autofocus="true" hidden="true"/>
+          <button id="done<%=item.id%>" class="edit" type="submit" hidden><img class="icon"
+              src="/assets/check-solid.svg" alt="check image"></button>
         </form>
-        <button id="edit<%=item.id%>" class="edit" onClick="switchBtn('<%=item.id%>')">edit</button>
-      </div>
-    <%}%>
+        <button id="edit<%=item.id%>" class="edit" onclick="handler('<%=item.id%>')"><img class="icon"
+            src="/assets/pencil-solid.svg" alt="pencil image"></button>
+            </div>
+      <% } %>
+        <form class="item" action="/add" method="post">
+          <input type="text" name="newItem" placeholder="New Item" autocomplete="off" autofocus="true" />
+          <button class="add" type="submit" name="list" value=<%=listHeader %>>+</button>
+        </form>
+  </div>
 
-    <form class="item" action="/add" method="POST">
-        <input type="text" name="newItem" placeholder="Add a new Item" autocomplete="off" autofocus="true"/>
-        <button class="add-btn" type="submit" name="list" value="<%=listHeader%>">add</button>
-    </form>
-</div>
-
-<script>
-    function switchBtn(id) {
+  <script>
+    function handler(id) {
       document.getElementById("content" + id).setAttribute("hidden", true)
       document.getElementById("edit" + id).setAttribute("hidden", true)
       document.getElementById("done" + id).removeAttribute("hidden")
       document.getElementById("input" + id).removeAttribute("hidden")
     }
-</script>
-
-<%- include('partials/footer.ejs'); -%>
+  </script>
+  <%- include('partials/footer.ejs'); -%>
