--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,12 @@
 <%- include('partials/header.ejs'); -%>
 
 <div class="tab-bar">
-  <% for(let list of lists){%>
-    <button class="tablinks">Today's List</button>
-    <button class="tablinks">This Week's List</button>
-    <button class="tablinks">This Month's List</button>
-  <%}%>
+    <button class="tablinks">Today</button>
+    <button class="tablinks">This Week</button>
+    <button class="tablinks">This Month</button>
+    <form action="/get-new" method="GET">
+      <button class="tablinks" type="submit">+</button>
+    </form>
 </div>
 
   <div class="box" id="heading">
