--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,51 +1,53 @@
 <%- include('partials/header.ejs'); -%>
 
-<form class="tab-bar" action="/list" method="POST">
-  <%lists.forEach(function(list){%>
-    <button class="tablinks" type="submit" name="list" value="<%=list.id%>" id="<%=list.id%>">
-      <%=list.name%>
-    </button>
-    <%});%>
-    <input class="tablinks" type="submit" id="tab" name="add" value="+">
+<div class="tab-bar">
+  <form action="/get-list" method="GET">
+    <% lists.forEach(function(list) { %>
+      <button class="tablinks" type="submit" name="list" value="<%= list.id %>">
+        <%= list.name %>
+      </button>
+    <% }); %>
   </form>
+  <button class="tablinks" type="button" onclick="window.location.href='/new'">+</button>
+</div>
 
-  <div class="box" id="heading">
-    <h1>
-      <%= list.name %>
-    </h1>
-  </div>
-  <div class="box">
-    <% for(let item of listItems){%>
-      <div class="item">
-        <form action="/delete" method="post">
-          <input type="checkbox" onchange="this.form.submit()" name="deletedItemId" value="<%= item.id %>">
-        </form>
-        <p id="content<%=item.id%>">
-          <%= item.content %>
-        </p>
-        <form class="edit" action="/edit" method="post">
-          <input type="hidden" name="updatedItemId" value="<%= item.id %>">
-          <input id="input<%=item.id%>" type="text" name="updatedItemContent" value="<%= item.content %>" autocomplete="off"
-            autofocus="true" hidden="true"/>
-          <button id="done<%=item.id%>" class="edit" type="submit" hidden><img class="icon"
-              src="/assets/check-solid.svg" alt="check image"></button>
-        </form>
-        <button id="edit<%=item.id%>" class="edit" onclick="handler('<%=item.id%>')"><img class="icon"
-            src="/assets/pencil-solid.svg" alt="pencil image"></button>
-            </div>
-      <% } %>
-        <form class="item" action="/add" method="post">
-          <input type="text" name="newItem" placeholder="New Item" autocomplete="off" autofocus="true" />
-          <button class="add" type="submit" name="list" value=<%=list.name %>>+</button>
-        </form>
-  </div>
+<div class="box" id="heading">
+  <h1>
+    <%= currentList.name %>
+  </h1>
+</div>
 
-  <script>
-    function handler(id) {
-      document.getElementById("content" + id).setAttribute("hidden", true)
-      document.getElementById("edit" + id).setAttribute("hidden", true)
-      document.getElementById("done" + id).removeAttribute("hidden")
-      document.getElementById("input" + id).removeAttribute("hidden")
-    }
-  </script>
-  <%- include('partials/footer.ejs'); -%>
+<div class="box">
+  <% listItems.forEach(function(item) { %>
+    <div class="item">
+      <form action="/delete" method="post">
+        <input type="checkbox" onchange="this.form.submit()" name="deletedItemId" value="<%= item.id %>">
+      </form>
+      <p id="content<%= item.id %>">
+        <%= item.content %>
+      </p>
+      <form class="edit" action="/edit" method="post">
+        <input type="hidden" name="updatedItemId" value="<%= item.id %>">
+        <input id="input<%= item.id %>" type="text" name="updatedItemContent" value="<%= item.content %>" autocomplete="off" autofocus="true" hidden="true"/>
+        <button id="done<%= item.id %>" class="edit" type="submit" hidden><img class="icon" src="/assets/check-solid.svg" alt="check image"></button>
+      </form>
+      <button id="edit<%= item.id %>" class="edit" onclick="handler('<%= item.id %>')"><img class="icon" src="/assets/pencil-solid.svg" alt="pencil image"></button>
+    </div>
+  <% }); %>
+  <form class="item" action="/add" method="post">
+    <input type="hidden" name="listId" value="<%= currentList.id %>">
+    <input type="text" name="newItem" placeholder="New Item" autocomplete="off" autofocus="true" />
+    <button class="add" type="submit">+</button>
+  </form>
+</div>
+
+<script>
+  function handler(id) {
+    document.getElementById("content" + id).setAttribute("hidden", true)
+    document.getElementById("edit" + id).setAttribute("hidden", true)
+    document.getElementById("done" + id).removeAttribute("hidden")
+    document.getElementById("input" + id).removeAttribute("hidden")
+  }
+</script>
+
+<%- include('partials/footer.ejs'); -%>
