Completed the view list function along with adjusted the CRUD functions.

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -2,8 +2,9 @@
 <div class="box" id="heading">
 <h1>New List Name:</h1>
 </div>
+
 <div class="box">
-    <form class="edit" action="/new-list" method="POST">
+    <form class="item" action="/new-list" method="POST">
         <input type="text" id="newListName" name="newListName" autocomplete="off" autofocus="true" />
         <button class="add" type="submit">+</button>
       </form>
