--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,9 +5,7 @@
 
 <div class="box">
     <form class="item" action="/new-list" method="POST">
-        <input type="text" id="newListName" name="newListName" autocomplete="off" autofocus="true" />
+        <input type="text" id="newListName" name="newListName" autocomplete="off" autofocus="true" required/>
         <button class="add" type="submit">+</button>
       </form>
 </div>
-
-<%- include('partials/footer.ejs'); -%>
