--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,12 +22,14 @@
   <% listItems.forEach(function(item) { %>
     <div class="item">
       <form action="/delete" method="POST">
+        <input type="hidden" name="currentListId" value="<%= currentList.id %>">
         <input type="checkbox" onchange="this.form.submit()" name="deletedItemId" value="<%= item.id %>">
       </form>
       <p id="content<%= item.id %>">
         <%= item.content %>
       </p>
       <form class="edit" action="/edit" method="POST">
+        <input type="hidden" name="currentListId" value="<%= currentList.id %>">
         <input type="hidden" name="updatedItemId" value="<%= item.id %>">
         <input id="input<%= item.id %>" type="text" name="updatedItemContent" value="<%= item.content %>" autocomplete="off" autofocus="true" hidden="true"/>
         <button id="done<%= item.id %>" class="edit" type="submit" hidden><img class="icon" src="/assets/check-solid.svg" alt="check image"></button>
@@ -36,17 +38,10 @@
     </div>
   <% }); %>
   <form class="item" action="/add" method="POST">
-    <input type="hidden" name="listId" value="<%= currentList.id %>">
+    <input type="hidden" name="currentListId" value="<%= currentList.id %>">
     <input type="text" name="newItem" placeholder="New Item" autocomplete="off" autofocus="true" />
     <button class="add" type="submit">+</button>
   </form>
-</div>
-
-<div class="box">
-<form action="/delete-list" method="POST">
-  <input type="hidden" name="deletedListId" value="<%= currentList.id %>">
-  <button type="submit">Delete List</button>
-</form>
 </div>
 
 <script>
